# ppiseq

./: .gitignore  README.md  pyproject.toml  setup.cfg
data_processing/: data_postprocessing.ipynb  data_preprocessing.ipynb  pdb_processor.py  test_pdb_processor.py
legacy/ankh2_ext1/: ankh_ext1_attn_pool_addition.py  ankh_ext1_sequence_concat.py  ankh_ext1_sequence_concat_randomized.py
legacy/ankh2_ext1/convbert/: ankh_ext1_attn_pool_addition.py  ankh_ext1_sequence_concat.py  ankh_ext1_sequence_concat_randomized.py
legacy/ankh2_ext2/: ankh_ext2_attn_pool_addition.py  ankh_ext2_sequence_concat.py  ankh_ext2_sequence_concat_randomized.py
legacy/ankh2_ext2/convbert/: ankh_ext2_attn_pool_addition.py  ankh_ext2_sequence_concat.py  ankh_ext2_sequence_concat_randomized.py
legacy/ankh3/ankh3_large_convbert/: ankh3_large_attn_pool_addition.py
legacy/ankh3/ankh3_large_lora/: ankh3_large_attn_pool_addition.py  ankh3_large_perceiver.py  ankh3_large_sequence_concat.py
legacy/ankh3/convbert/: ankh3_sequence_concat.py
legacy/ankh3/lora/: ankh3_perceiver.py  ankh3_sequence_concat.py  ankh3_sequence_concat_randomized.py
legacy/ankh_base/convbert/: ankh_base_attn_pool_addition.py
legacy/ankh_base/lora/: ankh_base_attn_pool_addition.py  ankh_base_perceiver.py  ankh_base_pool_addition.py  ankh_base_sequence_concat.py  ankh_base_sequence_concat_randomized.py
legacy/ankh_large 22-11-50-052/convbert/: ankh_large_attn_pool_addition.py  ankh_large_sequence_concat.py  ankh_large_sequence_concat_randomized.py
legacy/ankh_large/lora/: ankh_large_attn_pool_addition.py  ankh_large_sequence_concat.py  ankh_large_sequence_concat_randomized.py
legacy/esm2_3b/convbert/: esm2_3b_attn_pool_addition.py
legacy/esm2_3b/lora/: esm2_3b_attn_pool_addition.py  esm2_3b_sequence_concat.py  esm2_3b_sequence_concat_randomized.py
legacy/esm2_650m/convbert/: esm2_650m_attn_pool_addition.py  esm2_650m_sequence_concat.py
legacy/esm2_650m/lora/: esm2_650m_attn_pool_addition.py  esm2_650m_sequence_concat.py  esm2_650m_sequence_concat_randomized.py
ppi_research/: metrics.py  training_utils.py  utils.py
ppi_research/data_adapters/: __init__.py  collators.py  dataset_adapters.py  ppi_datasets.py  preprocessing.py  preprocessing_pipelines.py  tests.py
ppi_research/layers/: __init__.py  attention.py  convbert_encoder.py  feedforward.py  losses.py  perceiver.py  poolers.py
ppi_research/models/: __init__.py  attention_model.py  backbones.py  embed_concat.py  embed_concat_model.py  multichain.py  perceiver.py  perceiver_model.py  pooling_add.py  pooling_concat.py  pooling_model.py  sequence_concat.py  sequence_concat_model.py  simple_concat_model.py  single_attention.py  single_attention_model.py  utils.py
ppi_research/preprocessing/: prott5.py
ppiseq/: training_utils.py
ppiseq/data_adapters/: __init__.py  collators.py  dataset_adapters.py  ppi_datasets.py  preprocessing.py  preprocessing_pipelines.py  tests.py
ppiseq/layers/: __init__.py  attention.py  convbert_encoder.py  feedforward.py  losses.py  perceiver.py
ppiseq/models/: __init__.py  attention_model.py  backbones.py  embed_concat.py  hierarchical_pooling.py  multichain.py  perceiver.py  pooling_add.py  sequence_concat.py  utils.py
training/: demo.py  train.py
training/config/: ankh_config.yaml  esm_config.yaml  prott5.yaml  train_config.yaml
(+137 files in other folders)
