[build-system] 
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"


[options]
packages = "ppi_research"
zip_safe = "True"


[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ppi_research"
authors = [
    {name="Hazem Essam", email="hazem@proteinea.com"},
    {name="Mohamed Elshaffei", email="shaffei@proteinea.com"},
]
maintainers = [
    {name="Hazem Essam", email="hazem@proteinea.com"},
    {name="Mohamed Elshaffei", email="shaffei@proteinea.com"},
]
version = "1.0.0"

requires-python = ">=3.7"

description = "Protein Protein Interaction research."
long_description = "file: README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate==1.4.0",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "transformers==4.49.0",
    "datasets==3.3.1",
    "peft==0.14.0",
]

[tool.black]
line-length = 79 
target-version = ['py37']
force-exclude = "__init__.py"